# AoC2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  convert_input_to_headers.py  run_all.py  template.txt
day1/: day1  day1.cpp  test
day10/: day10.cpp
day11/: day11.cpp
day12/: day12  day12.cpp
day2/: day2.cpp
day3/: day3.cpp
day4/: day4.cpp
day5/: day5.cpp
day6/: day6.cpp
day7/: day7.cpp
day8/: day8.cpp
day9/: day9.cpp
input/: day1.h  day2.h  day3.h  day3_sample.h  day4.h  day4_sample.h  test.txt
utils/include/utils/: basic_timer.h  constexpr_map.h  graph.h  parse.h
